--- a/client/src/pages/Guest/Home/home.scss
+++ b/client/src/pages/Guest/Home/home.scss
@@ -14,7 +14,8 @@
 }
 
 .todays-games-toggle-button {
-    box-shadow: 0 5px 15px rgba(25, 174, 192,0.5);
+    // box-shadow: 0 5px 15px rgba(25, 174, 192,0.5);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.4);
     cursor: pointer;
     position: fixed;
     bottom: 40px;
